# solana-contract-wallet

./: .gitpod.yml  .travis.yml  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: rust.yml
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
src/client/: hello_world.ts  main.ts  wallet.ts  wallet_test.ts
src/program/: Cargo.toml
src/program/src/: command.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
