
[package]
name = "solana-contract-wallet"
version = "0.0.1"
description = "Solana smart contract wallet program written in Rust"
authors = ["portto <dev@portto.io>"]
repository = "https://github.com/portto/solana-contract-wallet"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.4.8"

[lib]
crate-type = ["cdylib", "lib"]

